--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -105,7 +105,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             width: 200px;
             position: fixed;
             alignment: left;
-            background-color: #1da1f2;
+            background-color: #1da1f3;
             overflow-x: hidden;
             padding-top: 20px;
             z-index: 0;
@@ -119,6 +119,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         <a href="/leah">leah</a>
         <br>
         <a href="/evan">evan</a>
+        <br>
+        <a href="/simon">simon</a>
     </div>
 
 </head>
