Finaly got the image swap to work

--- a/templates/simon.html
+++ b/templates/simon.html
@@ -20,7 +20,8 @@
     .mee{
         position: relative;
         left: 51%;
-        font-size: 30px;}
+        font-size: 30px;
+        }
 
     div.pic{
         width: 380px;
@@ -47,7 +48,7 @@
 
 <h1 class="mee"> Simon's Page</h1>
 
-<div style="text-align: center" class="aboutme">
+<div style="text-align:center" class="aboutme">
     <p class="fun"> Hello welcome to Simon Brunzell's about us Page, this is a page about the greatest thing ever... me!</p>
     <p class="fun">Some fun facts about me include...</p>
     <p class="fun"> I'm in 12th grade in my Senior year, I am a part of the Del Norte music program, I play the flute, have participated in choir, and
