added journal link

--- a/templates/simon.html
+++ b/templates/simon.html
@@ -66,6 +66,13 @@
 
 <br>
 
+
+<a href="https://docs.google.com/document/d/14MmFHefrfgQY180T0y2Cm4jv_q2mBz3U1obzI0VOSqc/
+edit?usp=sharing">paired journal
+
+</a>
+
+
 <div class="pic">
 </div>
 
