--- a/templates/sanjay.html
+++ b/templates/sanjay.html
@@ -15,12 +15,13 @@ Sanjay Bharadwaj
     <div class='text'>
         <h4 style="text-align: center;"> About me </h4>
         <p>Hi, I'm Sanjay. I'm a sophomore at Del Norte High School. I like Computer Science and hope to pursue this in the future.</p>
+        <p>In my free time I like playing tennis, reading, and watching TV. I also like sports such as soccer and tennis. </p>
         <table style="margin-bottom: 20px">
             <tr>
-                <td> <a href="https://github.com/SanjayB06">Github Profile</a> </td>
+                <td> <a target="_blank" href="https://github.com/SanjayB06">Github Profile</a> </td>
 
-                <td> <a href="https://github.com/SimonBrunzell/flask_portfolio/commits?author=SanjayB06">Commits</a> </td>
-                <td> <a href="https://github.com/SimonBrunzell/flask_portfolio/projects/1?card_filter_query=assignee%3Asanjayb06">Scrum Board Tasks</a> </td>
+                <td> <a target="_blank" href="https://github.com/SimonBrunzell/flask_portfolio/commits?author=SanjayB06">Commits</a> </td>
+                <td> <a target="_blank" href="https://github.com/SimonBrunzell/flask_portfolio/projects/1?card_filter_query=assignee%3Asanjayb06">Scrum Board Tasks</a> </td>
 
             </tr>
         </table>
@@ -34,12 +35,16 @@ Sanjay Bharadwaj
         <th>Date</th>
         <th>Team1</th>
         <th>Team2</th>
+        <th>Odds Team1</th>
+        <th>Odds Team2</th>
     </tr>
     {% for x in data["data"] %}
     <tr>
         <td>{{x["commence_time"]}}</td>
         <td>{{x["teams"][0]}}</td>
         <td>{{x["teams"][1]}}</td>
+        <td>{{x["sites"][0]["odds"]["h2h"][0]}}</td>
+        <td>{{x["sites"][0]["odds"]["h2h"][1]}}</td>
     </tr>
     {% endfor %}
 </table>
@@ -61,6 +66,13 @@ Sanjay Bharadwaj
         }
     </script>
     <style>
+        a {
+            text-decoration: none;
+        }
+        a:hover {
+            color: midnightblue;
+            text-decoration: underline
+        }
         .container {
             margin: 0 auto;
         }
@@ -85,7 +97,7 @@ Sanjay Bharadwaj
         table {
             width: 100%;
             border-collapse: collapse;
-
+            color: #fed2b9
         }
         th{
             height: 70px;
@@ -94,7 +106,7 @@ Sanjay Bharadwaj
         th,td {
             padding: 15px;
         }
-        td {
+        td, th {
             text-align: center;
             height: 50px;
 
