Fix About Us Pages

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -10,15 +10,11 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
         <ul class="navbar-nav mr-auto">
             <!--root menu -->
             <li class="nav-item active">
-                <a class="nav-link" href="/mainabout">Home</a>
+                <a class="nav-link" href="/mainabout">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarModel" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Pages
-                </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/grid">Mini Labs</a>
-                    <a class="dropdown-item" href="/mainabout">About Us</a>
                 </div>
             </li>
         </ul>
