--- a/templates/aboutjacob.html
+++ b/templates/aboutjacob.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{%  extends "layout/base.html" %}
+{%  extends "layouts/base.html" %}
 {%  set project = "Jacob" %}
 <head>
     <meta charset="UTF-8">
