--- a/templates/mainabout.html
+++ b/templates/mainabout.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-{%  extends "layout/base.html" %}
+{%  extends "layouts/base.html" %}
 {%  set project = "About Us" %}
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 {% block body %}
-    <div class="row">
-        <div class="col-3">
-            <a href="aboutdaniel.html.html" class="btn">Daniel</a>
-        </div>
+    <div class="container">
+        <div class="row" style="margin:auto">
+            <div class="col-3">
+                <a href="/aboutdaniel" class="btn">Daniel</a>
+            </div>
 
-        <div class="col-3">
-            <a href="aboutnathan.html" class="btn">Nathan</a>
-        </div>
+            <div class="col-3">
+                <a href="/aboutnathan" class="btn">Nathan</a>
+            </div>
 
-        <div class="col-3">
-            <a href="aboutreem.html" class="btn">Reem</a>
+            <div class="col-3">
+                <a href="/aboutreem" class="btn">Reem</a>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-6">
-            <a href="aboutjames.html" class="btn">James</a>
-        </div>
+        <div class="row" style="margin-top:10%; margin-left:5%">
+            <div class="col-6">
+                <a href="/aboutjames" class="btn">James</a>
+            </div>
 
-        <div class="col-6">
-            <a href="aboutjacob.html" class="btn">Jacob</a>
+            <div class="col-6">
+                <a href="/aboutjacob" class="btn">Jacob</a>
+            </div>
         </div>
     </div>
 {% endblock %}
