change about page title

--- a/templates/brian.html
+++ b/templates/brian.html
@@ -8,7 +8,7 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <!- Try building a new body here ->
-    <h1><center>Brian Tang</center></h1>
+    <h1><center>Brian Tang Home Page</center></h1>
     <body style="background-color:cornflowerblue;">
     </div>
     <p align="center">
