--- a/templates/divya.html
+++ b/templates/divya.html
@@ -9,7 +9,7 @@
 {% block body %}
     <!- Try building a new body here ->
     <h1><center>Divyanshi</center></h1>
-    <body style="background-color:lightpink;">
+    <body style="background-color:lightcoral;">
 </div>
 <p align="center">
     <iframe
