--- a/templates/leah.html
+++ b/templates/leah.html
@@ -9,11 +9,22 @@
     <!- Try building a new body here ->
     <p>hopefully this shows up------------------------------------------------------------------------------------------</p>
     <p id="click" onclick="fun()">CLICK HERE!</p>
-    <img src="https://images.unsplash.com/photo-1507146426996-ef05306b995a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHVwcHklMjBkb2d8ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80">
+    <img id="nomask" onclick="mask()" src="/static/assets/leahunmasked.jpg">
 
     <script>
+    var masked = false
         function fun(){
             document.getElementById("click").innerHTML = "HELLO!!!" ;
+        }
+        function mask(){
+            if (masked === false) {
+                document.getElementById("nomask").src = "/static/assets/leahmasked.jpg"
+                masked = true
+            }
+            else {
+                document.getElementById("nomask").src = "/static/assets/leahunmasked.jpg"
+                masked = false
+            }
         }
     </script>
 
@@ -28,6 +39,8 @@
         }
         img {
             margin-left: 250px;
+            width: 207px;
+            height: 368px;
         }
     </style>
 {% endblock %}
