Updated Fun Facts

--- a/templates/simon.html
+++ b/templates/simon.html
@@ -92,11 +92,11 @@
     var down = document.getElementById('GFG_DOWN');
 
     var arr = ["I am 17 years old", "I am symphonic band's flute section leader",
-        "I have my learners permit", "I get my license in Jan. so excited!", "I love to read, particularly fantasy", "I just joined Del Nortes's hip-hop club",
-        " I am the solo Bass singer in our show choir Vocal Flight", "I had a great time at Home-Coming",
+        "I have my learners permit", "I get my license in Jan. so excited!", "I love to read, particularly fantasy", "Del Norte's hip-hop club rules!",
+        " I am the solo Bass singer in our show choir Vocal Flight",
         "I objectively have the Best friends in the world!", "My friends are better than yours /hj",
-        "I am better than you /j", "My favorite candy is Twix", "I am going to be a polar bear for Halloween",
-        "My friends and I are going to play some D&d on Halloween", "BOO!", "I have to lead a sectional today :(","*spooky noise", ];
+        "I am better than you /j", "My favorite candy is Twix", "I'm having a friendsgiving at Denny's",
+        "My friends play d&d better than you","Happy Holidays","*merry noises",]
 
     up.innerHTML = "Click on the button to check "
         + "the type of element.<br><br>" + arr;
